gitops/basic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grade-submission-ingress
  namespace: grade-demo
spec:
  ingressClassName: nginx
  rules:
    - host: grade-demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grade-submission-api
                port:
                  number: 3000
